--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,89 +1,96 @@
 name: gcpro
-description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+description: A new Flutter project.
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
+publish_to: "none"
+
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.2
+  sdk: ">=3.4.1 <4.0.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
+  animations: ^2.0.11
+  auto_route: ^10.0.1
+ 
+  cached_network_image: ^3.4.1
+  chips_choice: ^3.0.1
+  connectivity_plus: ^6.1.2
+  country_code_picker: ^3.1.0
+  country_picker: ^2.0.27
+  crypto: ^3.0.6
+  cupertino_icons: ^1.0.8
+  device_info_plus: ^11.2.1
+  # device_preview: ^1.2.0
+  dio: ^5.7.0
+  dio_http_formatter: ^3.3.0
+  equatable: ^2.0.7
+  fl_chart: ^0.70.2
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  flutter_launcher_icons: ^0.14.3
+  flutter_localizations:
+    sdk: flutter
+  flutter_riverpod: ^2.6.1 
+  flutter_secure_storage: ^9.2.4
+  flutter_spinkit: ^5.2.1
+  flutter_staggered_grid_view: ^0.7.0
+  form_validator: ^2.1.1
+  freezed: ^3.0.4
+  freezed_annotation: ^3.0.0
+  gap: ^3.0.1
+  google_fonts: ^6.2.1
+  google_sign_in: ^6.2.2
+  hive_flutter: ^1.1.0
+  image: ^4.5.2
+  image_picker: ^1.1.2
+  intl: ^0.19.0
+  json_annotation: ^4.9.0
+  jwt_decoder: ^2.0.1
+  logger: ^2.5.0
+  pin_code_fields: ^8.0.1
+  riverpod_annotation: ^2.6.1
+  shared_preferences: ^2.3.5
+  shimmer: ^3.0.0
+  smooth_page_indicator: ^1.2.0
+  socket_io_client: ^3.0.2
+  state_notifier: ^1.0.0
+  timeago: ^3.7.0
+  uuid: ^4.5.1
+  zxing2: ^0.2.3
 
 dev_dependencies:
+  auto_route_generator: ^10.0.1
+  build_runner: ^2.4.14
+  custom_lint:
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  http_mock_adapter: ^0.6.1
+  json_serializable: ^6.9.3
+  mocktail: ^1.0.4
+  riverpod_generator: ^2.6.5
+  riverpod_lint: ^2.6.5
+  test_coverage_badge: ^0.3.2
+  very_good_analysis: ^7.0.0
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+flutter_gen:
+  output: lib/gen/
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+  colors:
+    enabled: false
 
-# The following section is specific to Flutter packages.
+  integrations:
+    flutter_localizations: true
+
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
+  generate: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    # - assets/google_fonts/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+scripts:
+  build: dart pub run build_runner build --delete-conflicting-outputs
+  watch: dart pub run build_runner watch --delete-conflicting-outputs
+  splash: dart run flutter_native_splash:create
